# litellm

./: .coverage  .env.example  .envrc  .gitgnore  .gitignore  .mcp.json  .mermaid-config.json  ANALYSIS_GROUP6_ERROR_FORMAT.md  ARCHITECTURE_CONSOLIDATED.md  BATCH_2A_GROUPS_1_2_REPORT.md  CHANGELOG.md  CLAUDE.md  CLAUDE_NEW_FEATURES.md  DIAGNOSTIC_REPORT_503.md  DOCUMENTATION_UPDATE_SUMMARY.md  E2E_TESTS_IMPLEMENTATION_SUMMARY.md  FINISH_REASON_ANALYSIS.md  FIX_SUMMARY_GROUP6_ERROR_FORMAT.md  GEMINI.md  GROUP6_FIX_REPORT.md  HTTPX_MOCK_ENHANCEMENT_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  MEMORY_ROUTING_README.md  MIGRATION_EXECUTION_GUIDE.md  PARALLEL_ERROR_FIX_FINAL_REPORT.md  PYCHARM_ENV_LAUNCHER_README.md  Proxy_Batch_Users.ipynb  QUICKSTART.md  RATE_LIMIT_FIX_README.md  README.md  RUN_TESTS.sh  SDK_MIGRATION_EXECUTIVE_SUMMARY.md  SDK_MIGRATION_PLAN.md  SDK_TESTING_GUIDE.md  SDK_TESTING_SUMMARY.md  SETUP_SUMMARY.md  TESTER_AGENT_FINAL_REPORT.md  TESTING_QUICK_REFERENCE.md  TESTING_STRATEGY_SUMMARY.md  TEST_FIX_SUMMARY.md  (+45 more)
.claude/: settings.json
.claude/commands/: analyze-errors.md
.clinerules/: general-guidelines.md
.clinerules/workflows/: general-wf.md
.codex/: CHANGELOG.md  INTEGRATION_EXAMPLE.md  LOCK_FILE_FIX.md  POETRY_VS_PIP.md  QUICK_START.md  README.md  diagnose_poetry_ssl.sh  fixed_setup_poetry.sh  setup.sh  setup_poetry_mirrors.sh  test_ssl_patch.py
.obsidian/: app.json  appearance.json  community-plugins.json  core-plugins.json  graph.json  hotkeys.json  workspace.json  workspace.json.backup
.obsidian/plugin-configs-backup/: README.md  console-debugger-data.json  mermaid-filter.err  obsidian-pandoc-data-landscape.json  obsidian-pandoc-data.json  show-hidden-files-data.json
.op/plugins/: psql.json
.serena/: project.yml
.serena/memories/: litellm_architecture_overview.md
.sugar/: claude_input.json  config.yaml  context_session.json  sugar.db
archive/: TEST_MATRIX.csv  finalsum
archive/agent-reports/: investigation.txt  pre_consolidation_headings.txt  pre_consolidation_inventory.txt  pre_consolidation_links.txt
config/: config-mvp.yaml  config-schema.json  config.yaml
deploy/: docker-compose.yml  otel.yaml  run_proxies.py  run_unified_proxy.py  start_proxies.py
docs/: CHANGELOG.md  INDEX.md  MULTI_ROUND_TOOL_CALL_ERROR_HANDLING.md
docs/architecture/: ARCHITECTURE_ANALYSIS.md  BINARY_VS_SDK_ARCHITECTURE.md  DESIGN_DECISIONS.md  LITELLM_ARCHITECTURE_OVERVIEW.md  LITELLM_SDK_INTEGRATION_PATTERNS.md  OTEL_LOGGING_PLAN.md  OVERVIEW.md  PRISMA_CALLBACK_DESIGN.md  QUEUE_BASED_PERSISTENCE.md  SDK_MIGRATION_INDEX.md  SDK_MIGRATION_ROLLOUT_ARCHITECTURE.md  SDK_MIGRATION_VISUAL_SUMMARY.md  STREAMING_TOOL_CALL_BUFFER_IMPLEMENTATION.md  TOOL_CALL_HANDLING_IMPLEMENTATION.md
docs/getting-started/: QUICKSTART.md  TUTORIAL.md
docs/guides/: CONFIGURATION.md  MCP_INTEGRATION.md  TESTING.md
docs/modules/: interceptor.md
docs/reference/: CONFIGURATION.md  SCHEMA_README.md
docs/templates/: Poetry_Note.md
docs/testing/: CLAUDE_MD_TESTING_SECTION_RECOMMENDED.md  HTTPX_MOCKING_STRATEGY.md  INDEX.md  OBSIDIAN_MERMAID_TEST_PLAN.md  README.md  TESTING_INFRASTRUCTURE_VALIDATION_REPORT.md  TEST_CHECKLIST.md  TEST_FAILURE_FIX_STRATEGY.md  TEST_FIX_IMPLEMENTATION_CHECKLIST.md  TEST_FIX_SUMMARY.md
logs/errors/: .gitkeep
src/: example_complete_workflow.py
templates/: Poetry Debug.md
tests/: conftest.py  test_binary_vs_sdk.py  test_error_handlers.py  test_interceptor_known_issues.py  test_litellm_proxy_refactored.py  test_memory_proxy.py  test_memory_routing.py  test_pipeline_e2e.py  test_schema_env_sync.py  test_sdk_components.py  test_sdk_e2e.py  test_set_env_vars_decorator.py  test_streaming_tool_call_buffer.py  test_supermemory_correct_auth.py  test_tool_call_buffer.py  test_tool_error_demo.py
tutorial/: test_tutorial.py
(+60 files in other folders)
